--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Objetivo1</button>
+                <button class="botao ativo">Servir o exercito</button>
                 <button class="botao">Objetivo2</button>
                 <button class="botao">Objetivo3</button>
                 <button class="botao">Objetivo4</button>
