--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -24,5 +23,6 @@
             
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
